# homework_module_2

./: README.md  config.py  main.py  pyproject.toml
logs/: log.txt
src/: decorators.py  external_api.py  generators.py  group.py  masks.py  processing.py  read_csv_xlsx.py  search.py  utils.py  widget.py
tasks/: task_1.txt  task_2.txt  task_3.txt  task_5.txt  task_6.txt  task_7.txt  task_8.txt  task_9.txt  tesk_4.txt
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_group.py  test_main.py  test_masks.py  test_processing.py  test_read_csv_xlsx.py  test_search.py  test_utils.py  test_widget.py
